--- a/frontends/landing/index.html
+++ b/frontends/landing/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <title>Menú Digital</title>
+    <title>Menapp</title>
   </head>
   <body>
     <div id="root"></div>
