--- a/frontends/restaurants/index.html
+++ b/frontends/restaurants/index.html
@@ -10,6 +10,7 @@
     <title>Menú Digital restaurants</title>
   </head>
   <body>
+    <a>aaa</a>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
